fix: resolves overflow bug
In Slideshow, it Wraps a div around the BackgroundImage components to resolve the overflow bug.

--- a/src/components/Slideshow/Slideshow.module.css
+++ b/src/components/Slideshow/Slideshow.module.css
@@ -4,14 +4,15 @@
   margin-bottom: 1.5rem;
 }
 
+.window {
+  height: 94.5%;
+}
+
 .menu {
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
-  bottom: -94.4%;
-  width: 100vw;
-  height: 5.6%;
+  height: 5.5%;
   margin-bottom: 4rem;
 }
 
